# filesystem-selection-manifest

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/scripts/: check-release-version.mjs
.github/workflows/: publish.yml
crates/fsman/: Cargo.toml
crates/fsman-cli/: Cargo.toml
crates/fsman-cli/src/: main.rs
crates/fsman-cli/tests/: cli.rs  invalid.fsman
crates/fsman-lsp/: Cargo.toml
crates/fsman-lsp/src/: main.rs
crates/fsman-node/: Cargo.toml
crates/fsman-node/src/: lib.rs
crates/fsman/src/: fsman.pest  lib.rs  output.rs  parser.rs  resolver.rs
examples/: basic.fsman
node/: README.md  native.cjs  package-lock.json  package.json  tsconfig.json
node/src/: index.test.ts  index.ts
vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode/src/: extension.ts
vscode/syntaxes/: fsman.tmLanguage.json
zed/: Cargo.toml  README.md  extension.toml
zed/languages/fsman/: brackets.scm  config.toml
zed/src/: lib.rs
