[workspace]
members = ["crates/fsman", "crates/fsman-cli", "crates/fsman-lsp", "crates/fsman-node"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
ignore = "0.4.28"
lsp-server = "0.9.0"
lsp-types = "0.97.0"
neon = "1.1.1"
pest = "2.8.6"
pest_derive = "2.8.6"
serde_json = "1.0"
