[workspace]
members = ["crates/fsman", "crates/fsman-cli", "crates/fsman-lsp", "crates/fsman-node"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Alex Spinu <spinualexandru@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/spinualexandru/filesystem-selection-manifest"
homepage = "https://github.com/spinualexandru/filesystem-selection-manifest"
keywords = ["filesystem", "manifest", "dotfiles", "configuration"]
categories = ["filesystem", "config"]

[workspace.dependencies]
ignore = "0.4.28"
lsp-server = "0.9.0"
lsp-types = "0.97.0"
neon = "1.1.1"
pest = "2.8.6"
pest_derive = "2.8.6"
serde_json = "1.0"
