[package]
name = "fsman-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Validate and resolve fsman filesystem selection manifests"

[dependencies]
fsman = { path = "../fsman", version = "0.1.1" }
serde_json.workspace = true
