[package]
name = "fsman-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Language server diagnostics for fsman manifests"

[dependencies]
fsman = { path = "../fsman", version = "0.1.0" }
lsp-server.workspace = true
lsp-types.workspace = true
serde_json.workspace = true
