[package]
name = "fsman"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Parse and resolve readable filesystem selection manifests"
documentation = "https://docs.rs/fsman"

[dependencies]
ignore.workspace = true
pest.workspace = true
pest_derive.workspace = true
